--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     "><img src="Paper-emoji.png"></button>
 
     <button onclick="
-   const computerMove=pickComputerMove();
+     computerMove=pickComputerMove();
    playGame(`Scissors`);
     "><img src="Scissors-emoji.png"></button>
 
